[package]
name = "pip-udeps"
version = "0.1.0"
authors = ["Lev Ostatnigrosh <levostatnigrosh@pm.me>"]
description = "Find unused dependencies in a Python project"
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
rustpython-parser = { version = "0.3.0" }
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.80"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
glob = "0.3.1"
log = "0.4.21"
tempfile = "3.10.1"
toml = "0.8.10"
walkdir = "2.5.0"


[features]
visitor = []
