[package]
name = "pip-udeps"
version = "0.1.0"
authors = ["Lev Ostatnigrosh <levostatnigrosh@pm.me>"]
description = "Find unused dependencies in a Python project"
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
rustpython-parser = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.80"
colored = "2.1.0"
dialoguer = "0.11.0"
glob = "0.3.1"
log = "0.4.21"
tempfile = "3.10.1"
toml = "0.8.10"
walkdir = "2.5.0"
serde_json = "=1.0.1"
rustpython-ast = { version = "*", features = ["visitor"] }
tabled = "0.15.0"
fs_extra = "1.3.0"
bytesize = "1.3.0"
toml_edit = "0.22.9"


[dependencies.clap]
version = "4.4.18"
features = ["suggestions", "color", "wrap_help", "cargo", "derive"]
