[package]
name = "unpack"
version = "0.1.0"
authors = ["Lev Ostatnigrosh <levostatnigrosh@pm.me>"]
homepage = "https://github.com/bnkc/unpack"
keywords = ["python", "unpack", "dependency", "tool"]
description = "Unpack is a simple, fast and user-friendly tool to analyze python project packaging."
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["/benchmarks/*"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bnkc/unpack"
rust-version = "1.76.0"


[dependencies]
rustpython-parser = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.80"
glob = "0.3.1"
log = "0.4.21"
tempfile = "3.10.1"
toml = "0.8.10"
walkdir = "2.5.0"
serde_json = "=1.0.1"
tabled = "0.15.0"
fs_extra = "1.3.0"
bytesize = "1.3.0"
toml_edit = "0.22.9"
ignore = "0.4.22"
rustpython-ast = { version = "0.3.0", features = ["visitor"] }
regex = "1.10.4"


[dependencies.clap]
version = "4.4.18"
features = ["suggestions", "color", "wrap_help", "cargo", "derive"]
